edit Prices data

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -1,147 +1,145 @@
 {
-	"profile": {
-		"greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
-	},
-	"menu": {
-		"arabic":"التحدث باللغة العربية",
-		"english": "Speak English",
-		"start_over": "ابدء",
-		"branches": "فروع المعمل",
-		"order": "تحديثات الطلبات",
-		"help": "خدمة العملاء",
-		"suggestion": "القائمة",
-		"shop": "تسوق الآن",
-		"Thanks": "لا شكرا",
-		"prices": "اسعار الأشعة والحجز",
-		"resultXray": "نتائج الأشعة",
-		"resultTests": "نتائج التحاليل",
-		"visitDetails": "الزيارة المنزلية",
-		"preparations": "التحضيرات",
-		"contracts": "التعاقدات المتاحة",
-		"radiologyBranches": "فروع الأشعة",
-		"labsBranches": "فروع المعمل",
-		"complaints": "الشكاوى",
-		"approvals": "الموافقات"
-	},
-	"get_started": {
-		"welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
-		"menu": "يمكنك استخدام القائمة الموجودة أدناه ",
-		"help": "ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"
-	},
-	"names_Radiology": {
-		"message": "لمعرفة اسعار الأشعة اوالحجز\nاختر من القائمة ادناه",
-		"X-ray1": "أشعة على الرحم والأنابيب بالصبغة",
-		"X-ray2":"أشعة عادية على الركبة",
-		"X-ray3": "أشعة عادية عالفقرات القطنية",
-		"X-ray4": "أشعة عادية على الصدر (وضعين)",
-		"X-ray5": " على جميع الفقرات",
-		"X-ray6": "أشعة عادية على الرسخ",
-		"CR1":"سيفالوميتري",
-		"CR2":"بانوراما على الأسنان",
-		"CT1": "مقطعية عالبطن ثلاثية المراحل",
-		"CT2": "مقطعية عالبطن",
-		"CT3": "مقطعية عالبطن و الحوض",
-		"CT4": "مقطعية عالصدر",		
-		"other":"أشعة اخرى"	,
-		"enquire":"برجاء كتابة اسم الأشعة أو الفحص",
-		"check":"برجاء كتابة الأسم بصورة صحيحة",
-		"suggestion":"هل تقصد {{radiologyName}}؟",
-		"price":"سعر الفحص هو:{{radiologyPrice}} جنية"
-	},
-	"prices_Radiology": {
-		"X-ray1": "السعر: 1900 جنية",		
-		"X-ray2": "السعر: 520 جنية",
-		"X-ray3": "السعر: 550 جنية",
-		"X-ray4": "السعر: 600 جنية",
-		"X-ray5": "أشعة عادية على جميع الفقرات معا في فيلم واحد\nالسعر:600 جنية ",
-		"X-ray6": "السعر: 520 جنية",
-		"CR1": "السعر: 350 جنية",		
-		"CR2": "السعر: 390 جنية",		
-		"CT1": "مقطعية عالبطن ثلاثية المراحل\nالسعر:1640 جنية ",		
-		"CT2": "السعر: 1700 جنية",		
-		"CT3": "مقطعية عالبطن و الحوض\nالسعر:2880 جنية ",		
-		"CT4": "السعر: 1540 جنية",		
-		"visit_branch": " حجز زيارة فى الفرع",
-		"visit_home": " حجز زيارة فى البيت"		
-	},
-	"order": {
-		"prompt": "يسعدنا مساعدتك. حدد مما يلي",
-		"search": "البحث حسب رقم الطلب",
-		"account": "ربط حسابي",
-		"dialog": "مربع حوار ربط الحساب",
-		"searching": "البحث عن الطلب الأخير...",
-		"number": "بالتأكيد، يُرجى كتابة رقم الطلب",
-		"status": "طلبك في الطريق إليك، من المتوقع أن يصلك خلال 3 أيام."
-	},
-	"care": {
-		"prompt": "لتوصيلك بالفريق المناسب، يُرجى اطلاعي على ما تريده؟",
-		"order": "استفسارات بشأن الطلب",
-		"billing": "مشاكل الفوترة",
-		"other": "أخرى",
-		"appointment": "شكرا لرغبتك في تحديد موعد",
-		"issue": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك في أي أسئلة بشأن {{topic}}.",
-		"default": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك اليوم. كيف يمكنني مساعدتك؟",
-		"style": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا للإجابة عن أي أسئلة لديك بشأن موديلات الصيف التي نقدمها",
-		"end": "هذا أقصى ما يمكن للعرض التجريبي تقديمه. يمكنك الاستفادة من إمكانات منصة Messenger في نشاطك التجاري. يرجى زيارة موقع https://fb.me/get-sample-oc للتعرف على كيفية إنشاء تجربة مماثلة",
-		"help": "المساعدة"
-	},
-	"survey": {
-		"prompt": "مرحبًا، هل تريد الحصول على ملاحظات سريعة بشأن تجربتك الأخيرة مع {{agentFirstName}}",
-		"positive": "نشكرك على ملاحظاتك",
-		"neutral": "نشكرك على الملاحظات، وإذا كان هناك أمر ينبغي علينا تحسينه، فيُرجى عدم التردد في التعليق باستخدام الهاشتاج #اقتراح",
-		"negative": "نشكرك على إخبارنا. يؤسفنا سماع ذلك، إذا كان بوسعنا القيام بشيء لتغيير ما حدث، فيُرجى إعلامنا"
-	},
-	"chat_plugin": {
-		"prompt": "شكرًا لزيارتنا متجرنا ، تأكد من مراجعة جميع الأنماط الرائعة التي لدينا في قسم الصيف."
-	},
-	"fallback": {
-		"any": "عذرًا، ولكن لا يمكنني التعرف على \"{{message}}\".",
-		"attachment": "نشكرك على إرسال هذا المُرفق، يمكننا توصيلك بأحد الوكلاء لمراجعته أو يمكننا البدء من جديد"
-	},
-	"branches": {
-		"greeting": "برجاء اختيار الفرع الأقرب لك..",
-		"qanater": "القناطر",
-		"banha": "بنها"
-	},
-	"common": {
-		"yes": "نعم",
-		"no": "لا",
-		"no_contract":"لا",
-		"title": "قم بأختيار نعم أو لا من القائمة أدناه"
-	},
-	"questions": {
-		"contract": "هل يوجد تأمين أو تعاقد؟",
-		"bookVisit": "  حجز زيارة فى الفرع؟",
-		"bookHomeVisit": "  حجز زيارة منزلية؟"
-	},
-	"customer_service": {
-		"redirection": "تم تحويلك إلى خدمة العملاء. يرجى الانتظار. إذا كنت ترغب في العودة إلى القائمة، اضغط على الزر أدناه.",
-		"radiology_name":"سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
-		"prescription":"سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة",
-		"chat":"الرد التلقائي"
-	},
-  	"complaints":{
-		"submit":"برجاء كتابة الشكوي الخاصة بك وسيتم تحويلك إلى خدمة العملاء"
-	},
-	"radiology_results":{
-		"enquire":"برجاء كتابة الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
-	},
-	"test_results":{
-		"enquire":"برجاء كتابة الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
-	},
-	"home_visit":{
-		"submit":"برجاء كتابة الاسم ورقم التليفون وسيتم تحويلك إلى خدمة العملاء"
-	},
-	"contracts":{
-		"enquire":"برجاء كتابة اسم التعاقد - شركة التأمين",
-		"suggestion":"هل تقصد {{companyName}}؟",
-		"yes":"نعم يوجد تعاقد\n للرجوع إلى القائمة اضغط على الزر ادناه",
-		"no":"هل تريد كتابة إسم شركة أخرى ؟\n للرجوع إلى القائمة اضغط على الزر ادناه"
-	},
-	"preparations":{
-		"enquire":"برجاء كتابة اسم الفحص",
-		"suggestion":"هل تقصد {{prepName}}؟",
-		"prep":"التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على الزر ادناه",
-		"check":"برجاء كتابة اسم الفحص بصورة صحيحة"
-	}
+  "profile": {
+    "greeting": "أهلاً بك {{userFirstName}}. أنا المساعد الافتراضي لخدمات كايروسكان"
+  },
+  "menu": {
+    "arabic": "التحدث باللغة العربية",
+    "english": "Speak English",
+    "start_over": "ابدء",
+    "branches": "فروع المعمل",
+    "order": "تحديثات الطلبات",
+    "help": "خدمة العملاء",
+    "suggestion": "القائمة",
+    "shop": "تسوق الآن",
+    "Thanks": "لا شكرا",
+    "prices": "اسعار الأشعة والحجز",
+    "resultXray": "نتائج الأشعة",
+    "resultTests": "نتائج التحاليل",
+    "visitDetails": "الزيارة المنزلية",
+    "preparations": "التحضيرات",
+    "contracts": "التعاقدات المتاحة",
+    "radiologyBranches": "فروع الأشعة",
+    "labsBranches": "فروع المعمل",
+    "complaints": "الشكاوى",
+    "approvals": "الموافقات"
+  },
+  "get_started": {
+    "welcome": "\"مرحبًا {{userFirstName}}! مرحبًا بك في Original Coast Clothing حيث يمكنك العثور على موديلات ملابس تناسب كل مناسبة.",
+    "menu": "يمكنك استخدام القائمة الموجودة أدناه ",
+    "help": "ما الخدمة التي تحتاج مساعدتي فيها اليوم؟"
+  },
+  "names_Radiology": {
+    "message": "لمعرفة اسعار الأشعة\nاختر من القائمة ادناه",
+    "X-ray": "أشعة عادية",
+    "CR": "أشعة عادية ديجيتال",
+    "CT": "أشعة مقطعية",
+    "PET": "المسح الذرى",
+    "NNUCLEAR": "المسح الذرى",
+    "OT": "تصوير مقطعي",
+    "DX": "قياس هشاشة",
+    "MG": "ماموجرافى",
+    "MRI": "أشعة بالرنين المغنطيسي",
+    "US": "الموجات فوق الصوتية",
+    "other": "أشعة اخرى",
+    "enquire": "برجاء كتابة اسم الأشعة أو الفحص",
+    "check": "برجاء كتابة الأسم بصورة صحيحة",
+    "suggestion": "هل تقصد {{radiologyName}}؟",
+    "price": "سعر الفحص هو:{{radiologyPrice}} جنية"
+  },
+  "prices_Radiology": {
+    "X-ray1": "السعر: 1900 جنية",
+    "X-ray2": "السعر: 520 جنية",
+    "X-ray3": "السعر: 550 جنية",
+    "X-ray4": "السعر: 600 جنية",
+    "X-ray5": "أشعة عادية على جميع الفقرات معا في فيلم واحد\nالسعر:600 جنية ",
+    "X-ray6": "السعر: 520 جنية",
+    "CR1": "السعر: 350 جنية",
+    "CR2": "السعر: 390 جنية",
+    "CT1": "مقطعية عالبطن ثلاثية المراحل\nالسعر:1640 جنية ",
+    "CT2": "السعر: 1700 جنية",
+    "CT3": "مقطعية عالبطن و الحوض\nالسعر:2880 جنية ",
+    "CT4": "السعر: 1540 جنية",
+    "visit_branch": " حجز زيارة فى الفرع",
+    "visit_home": " حجز زيارة فى البيت"
+  },
+  "order": {
+    "prompt": "يسعدنا مساعدتك. حدد مما يلي",
+    "search": "البحث حسب رقم الطلب",
+    "account": "ربط حسابي",
+    "dialog": "مربع حوار ربط الحساب",
+    "searching": "البحث عن الطلب الأخير...",
+    "number": "بالتأكيد، يُرجى كتابة رقم الطلب",
+    "status": "طلبك في الطريق إليك، من المتوقع أن يصلك خلال 3 أيام."
+  },
+  "care": {
+    "prompt": "لتوصيلك بالفريق المناسب، يُرجى اطلاعي على ما تريده؟",
+    "order": "استفسارات بشأن الطلب",
+    "billing": "مشاكل الفوترة",
+    "other": "أخرى",
+    "appointment": "شكرا لرغبتك في تحديد موعد",
+    "issue": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك في أي أسئلة بشأن {{topic}}.",
+    "default": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا لمساعدتك اليوم. كيف يمكنني مساعدتك؟",
+    "style": "مرحبًا {{userFirstName}}، أود أن أعرفك بنفسي أنا {{agentFirstName}}، وأنا هنا للإجابة عن أي أسئلة لديك بشأن موديلات الصيف التي نقدمها",
+    "end": "هذا أقصى ما يمكن للعرض التجريبي تقديمه. يمكنك الاستفادة من إمكانات منصة Messenger في نشاطك التجاري. يرجى زيارة موقع https://fb.me/get-sample-oc للتعرف على كيفية إنشاء تجربة مماثلة",
+    "help": "المساعدة"
+  },
+  "survey": {
+    "prompt": "مرحبًا، هل تريد الحصول على ملاحظات سريعة بشأن تجربتك الأخيرة مع {{agentFirstName}}",
+    "positive": "نشكرك على ملاحظاتك",
+    "neutral": "نشكرك على الملاحظات، وإذا كان هناك أمر ينبغي علينا تحسينه، فيُرجى عدم التردد في التعليق باستخدام الهاشتاج #اقتراح",
+    "negative": "نشكرك على إخبارنا. يؤسفنا سماع ذلك، إذا كان بوسعنا القيام بشيء لتغيير ما حدث، فيُرجى إعلامنا"
+  },
+  "chat_plugin": {
+    "prompt": "شكرًا لزيارتنا متجرنا ، تأكد من مراجعة جميع الأنماط الرائعة التي لدينا في قسم الصيف."
+  },
+  "fallback": {
+    "any": "عذرًا، ولكن لا يمكنني التعرف على \"{{message}}\".",
+    "attachment": "نشكرك على إرسال هذا المُرفق، يمكننا توصيلك بأحد الوكلاء لمراجعته أو يمكننا البدء من جديد"
+  },
+  "branches": {
+    "greeting": "برجاء اختيار الفرع الأقرب لك..",
+    "qanater": "القناطر",
+    "banha": "بنها"
+  },
+  "common": {
+    "yes": "نعم",
+    "no": "لا",
+    "no_contract": "لا",
+    "title": "قم بأختيار نعم أو لا من القائمة أدناه"
+  },
+  "questions": {
+    "contract": "هل يوجد تأمين أو تعاقد؟",
+    "bookVisit": "  حجز زيارة فى الفرع؟",
+    "bookHomeVisit": "  حجز زيارة منزلية؟"
+  },
+  "customer_service": {
+    "redirection": "تم تحويلك إلى خدمة العملاء. يرجى الانتظار. إذا كنت ترغب في العودة إلى القائمة، اضغط على الزر أدناه.",
+    "radiology_name": "سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
+    "prescription": "سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة",
+    "chat": "الرد التلقائي"
+  },
+  "complaints": {
+    "submit": "برجاء كتابة الشكوي الخاصة بك وسيتم تحويلك إلى خدمة العملاء"
+  },
+  "radiology_results": {
+    "enquire": "برجاء كتابة الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
+  },
+  "test_results": {
+    "enquire": "برجاء كتابة الاسم ورقم التليفون المسجل به البيانات وسيتم تحويلك إلى خدمة العملاء"
+  },
+  "home_visit": {
+    "submit": "برجاء كتابة الاسم ورقم التليفون وسيتم تحويلك إلى خدمة العملاء"
+  },
+  "contracts": {
+    "enquire": "برجاء كتابة اسم التعاقد - شركة التأمين",
+    "suggestion": "هل تقصد {{companyName}}؟",
+    "yes": "نعم يوجد تعاقد\n للرجوع إلى القائمة اضغط على الزر ادناه",
+    "no": "هل تريد كتابة إسم شركة أخرى ؟\n للرجوع إلى القائمة اضغط على الزر ادناه"
+  },
+  "preparations": {
+    "enquire": "برجاء كتابة اسم الفحص",
+    "suggestion": "هل تقصد {{prepName}}؟",
+    "prep": "التحضيرات هي\n {{prepValue}}\n للرجوع إلى القائمة اضغط على الزر ادناه",
+    "check": "برجاء كتابة اسم الفحص بصورة صحيحة"
+  }
 }
