--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -34,7 +34,7 @@
     "CR": "أشعة عادية ديجيتال",
     "CT": "أشعة مقطعية",
     "PET": "المسح الذرى",
-    "NNUCLEAR": "المسح الذرى",
+    "NNUCLEAR": "الطب النووى",
     "OT": "تصوير مقطعي",
     "DX": "قياس هشاشة",
     "MG": "ماموجرافى",
@@ -47,18 +47,6 @@
     "price": "سعر الفحص هو:{{radiologyPrice}} جنية"
   },
   "prices_Radiology": {
-    "X-ray1": "السعر: 1900 جنية",
-    "X-ray2": "السعر: 520 جنية",
-    "X-ray3": "السعر: 550 جنية",
-    "X-ray4": "السعر: 600 جنية",
-    "X-ray5": "أشعة عادية على جميع الفقرات معا في فيلم واحد\nالسعر:600 جنية ",
-    "X-ray6": "السعر: 520 جنية",
-    "CR1": "السعر: 350 جنية",
-    "CR2": "السعر: 390 جنية",
-    "CT1": "مقطعية عالبطن ثلاثية المراحل\nالسعر:1640 جنية ",
-    "CT2": "السعر: 1700 جنية",
-    "CT3": "مقطعية عالبطن و الحوض\nالسعر:2880 جنية ",
-    "CT4": "السعر: 1540 جنية",
     "visit_branch": " حجز زيارة فى الفرع",
     "visit_home": " حجز زيارة فى البيت"
   },
@@ -116,7 +104,7 @@
     "redirection": "تم تحويلك إلى خدمة العملاء. يرجى الانتظار. إذا كنت ترغب في العودة إلى القائمة، اضغط على الزر أدناه.",
     "radiology_name": "سيتم تحويلك الى خدمة العملاء \n برجاء كتابة اسم الأشعة او ارسال الروشتة",
     "prescription": "سيتم تحويلك الى خدمة العملاء \n برجاء ارسال الروشتة",
-    "chat": "الرد التلقائي"
+    "chat": "القائمة الرئيسية"
   },
   "complaints": {
     "submit": "برجاء كتابة الشكوي الخاصة بك وسيتم تحويلك إلى خدمة العملاء"
