Edit Prices appearing & Customer services

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -41,7 +41,8 @@
     "MRI": "أشعة بالرنين المغنطيسي",
     "US": "الموجات فوق الصوتية",
     "other": "أشعة اخرى",
-    "enquire": "برجاء كتابة اسم الأشعة أو الفحص",
+    "enquire": "برجاء كتابة اسم الأشعة\n سيقوم بالرد عليك أحد ممثلي خدمة العملاء",
+    "enquireCateg": "برجاء كتابة اسم الأشعة المراد معرفة سعرها",
     "check": "برجاء كتابة الأسم بصورة صحيحة",
     "suggestion": "هل تقصد {{radiologyName}}؟",
     "price": "سعر الفحص هو:{{radiologyPrice}} جنية"
