last update for prices

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -41,11 +41,11 @@
     "MRI": "أشعة بالرنين المغنطيسي",
     "US": "الموجات فوق الصوتية",
     "other": "أشعة اخرى",
-    "enquire": "برجاء كتابة اسم الأشعة\n سيقوم بالرد عليك أحد ممثلي خدمة العملاء",
+    "enquire": "ارسل لنا روشتة الطبيب \n سيقوم بالرد عليك أحد ممثلي خدمة العملاء",
     "enquireCateg": "برجاء كتابة اسم الأشعة المراد معرفة سعرها",
     "check": "برجاء كتابة الأسم بصورة صحيحة",
     "suggestion": "هل تقصد {{radiologyName}}؟",
-    "price": "سعر الفحص هو:{{radiologyPrice}} جنية"
+    "price": "سعر الفحص هو: {{radiologyPrice}} جنية"
   },
   "prices_Radiology": {
     "visit_branch": " حجز زيارة فى الفرع",
@@ -83,7 +83,10 @@
   },
   "fallback": {
     "any": "عذرًا، ولكن لا يمكنني التعرف على \"{{message}}\".",
-    "attachment": "نشكرك على إرسال هذا المُرفق، يمكننا توصيلك بأحد الوكلاء لمراجعته أو يمكننا البدء من جديد"
+    
+		"attachment": "نشكرك على إرسال هذا المُرفق. سيتم الرد عليك من قبل أحد ممثلي خدمة العملاء،\n أو يمكنك العودة إلى القائمة."
+	  
+	  
   },
   "branches": {
     "greeting": "برجاء اختيار الفرع الأقرب لك..",
