UPDATE some bugs

--- a/locales/ar_AR.json
+++ b/locales/ar_AR.json
@@ -125,7 +125,7 @@
   "contracts": {
     "enquire": "برجاء كتابة اسم التعاقد - شركة التأمين",
     "suggestion": "هل تقصد {{companyName}}؟",
-    "yes": "نعم يوجد تعاقد\n للرجوع إلى القائمة اضغط على الزر ادناه",
+    "yes": ".نعم يوجد تعاقد\n للرجوع إلى القائمة اضغط على الزر ادناه",
     "no": "هل تريد كتابة إسم شركة أخرى ؟\n للرجوع إلى القائمة اضغط على الزر ادناه"
   },
   "preparations": {
